tests/ui/codegen/unknown-llvm-intrinsic.stderr
error: unknown LLVM intrinsic `llvm.abcde`
  --> $DIR/unknown-llvm-intrinsic.rs:8:5
   |
LL |     fn foo();
   |     ^^^^^^^^^

error: aborting due to 1 previous error

